[gd_scene load_steps=16 format=3 uid="uid://brldvuotlrlu7"]

[ext_resource type="Script" path="res://scripts/battle/characters/base/character_view_model.gd" id="1_d6dh1"]
[ext_resource type="Texture2D" uid="uid://c3fque8a4ik0j" path="res://sprites/battle/characters/immunocytes/neut/slash_attack.png" id="2_jf60s"]
[ext_resource type="Texture2D" uid="uid://65xy6foolauq" path="res://sprites/battle/characters/immunocytes/neut/pierce_attack.png" id="3_nmebi"]
[ext_resource type="Texture2D" uid="uid://bxhtvbemvdsrs" path="res://sprites/battle/characters/immunocytes/neut/block.png" id="3_sum3q"]
[ext_resource type="Texture2D" uid="uid://xq2xyd4ivpm" path="res://sprites/battle/characters/immunocytes/neut/blunt_attack.png" id="4_2fvku"]
[ext_resource type="Texture2D" uid="uid://dcp5tnyjlkg4x" path="res://sprites/battle/characters/immunocytes/neut/default.png" id="4_dnjgj"]
[ext_resource type="Texture2D" uid="uid://cr5rqv0uv64p3" path="res://sprites/battle/characters/immunocytes/neut/evade.png" id="5_dcs21"]
[ext_resource type="Texture2D" uid="uid://drltmipr5lo2a" path="res://sprites/battle/characters/immunocytes/neut/movement.png" id="6_ltycr"]
[ext_resource type="Texture2D" uid="uid://c6bir2rcubwy2" path="res://sprites/battle/characters/immunocytes/neut/stun.png" id="7_qif1v"]
[ext_resource type="Script" path="res://scripts/ui/battle/characters_components/atp_slots/atp_slots_manager_ui.gd" id="9_r4gj7"]
[ext_resource type="PackedScene" uid="uid://0s320kriran8" path="res://scenes/ui/battle/characters_components/health_bars/subcharacter_bars.tscn" id="10_p1s56"]

[sub_resource type="SpriteFrames" id="SpriteFrames_moquk"]
resource_local_to_scene = true
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_jf60s")
}],
"loop": true,
"name": &"attack_1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_nmebi")
}],
"loop": true,
"name": &"attack_2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_2fvku")
}],
"loop": true,
"name": &"attack_3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_sum3q")
}],
"loop": false,
"name": &"block",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_dnjgj")
}],
"loop": false,
"name": &"default",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_dcs21")
}],
"loop": false,
"name": &"evade",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_ltycr")
}],
"loop": false,
"name": &"movement",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_qif1v")
}],
"loop": false,
"name": &"stun",
"speed": 0.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m1gbb"]
bg_color = Color(1, 1, 1, 0.556863)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sn2ax"]
bg_color = Color(0.905882, 0.776471, 0.196078, 0.768627)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jnt4r"]

[node name="AbstractCharacterView" type="Node2D" groups=["characters"]]
script = ExtResource("1_d6dh1")

[node name="Actions" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -27)
sprite_frames = SubResource("SpriteFrames_moquk")
animation = &"attack_3"

[node name="ATPSlotsContainer" type="HBoxContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = -68.0
offset_bottom = -68.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
theme_override_constants/separation = 4
alignment = 1
script = ExtResource("9_r4gj7")

[node name="ClickArea" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -63.0
offset_right = 14.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_m1gbb")
theme_override_styles/hover = SubResource("StyleBoxFlat_m1gbb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_sn2ax")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_jnt4r")

[node name="SubcharacterBars" parent="." instance=ExtResource("10_p1s56")]
theme_override_constants/margin_top = 5

[connection signal="mouse_entered" from="ClickArea" to="." method="_on_character_mouse_entered"]
[connection signal="mouse_exited" from="ClickArea" to="." method="_on_character_mouse_exited"]
[connection signal="pressed" from="ClickArea" to="." method="_on_character_pressed"]
